[gd_scene load_steps=11 format=3 uid="uid://bqpm2tdrb07l2"]

[ext_resource type="Script" path="res://Player.gd" id="1_ltf0l"]
[ext_resource type="PackedScene" uid="uid://dfltsmkf002ly" path="res://pistol.tscn" id="2_qyc0g"]
[ext_resource type="AudioStream" uid="uid://nldfnapd23md" path="res://JumpPlayer.wav" id="3_4ijmt"]
[ext_resource type="Texture2D" uid="uid://db3hli0y7jxed" path="res://Pistol/Patrons.png" id="4_ucgdf"]
[ext_resource type="Texture2D" uid="uid://cw73t3fjel6bc" path="res://chr_knight/EnemyIcon.png" id="5_ldth0"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0nibf"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_g5o52"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="LabelSettings" id="LabelSettings_2s3dd"]
font_size = 48

[sub_resource type="SphereShape3D" id="SphereShape3D_2eb7g"]

[sub_resource type="LabelSettings" id="LabelSettings_35wi1"]
font_size = 48

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_ltf0l")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00703, 0)
mesh = SubResource("CapsuleMesh_0nibf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00703, 0)
shape = SubResource("ConvexPolygonShape3D_g5o52")

[node name="Head" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6374, -0.18324)

[node name="Pistol" parent="Head/Camera3D" instance=ExtResource("2_qyc0g")]
transform = Transform3D(0.544784, 0, 0, 0, 0.555907, 0, 0, 0, 0.53567, -0.317383, -0.520752, -0.58544)

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4ijmt")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OpenE" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 579.0
offset_top = 583.0
offset_right = 812.0
offset_bottom = 650.0
text = "E To Open"
label_settings = SubResource("LabelSettings_2s3dd")

[node name="ColisonItem" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ColisonItem"]
transform = Transform3D(2.60323, 0, 0, 0, 2.45092, 0, 0, 0, 2.50578, 0, 1.14388, 0)
shape = SubResource("SphereShape3D_2eb7g")

[node name="Patrons" type="Sprite2D" parent="."]
position = Vector2(101.625, 88.125)
scale = Vector2(0.516055, 0.509878)
texture = ExtResource("4_ucgdf")

[node name="Label" type="Label" parent="Patrons"]
offset_left = 193.631
offset_top = -1.54972e-05
offset_right = 511.631
offset_bottom = 146.0
text = "A/N"
label_settings = SubResource("LabelSettings_35wi1")

[node name="TimerRestart" type="Timer" parent="."]

[node name="EnemyIcon" type="Sprite2D" parent="."]
position = Vector2(1019, 81)
scale = Vector2(0.554521, 0.527286)
texture = ExtResource("5_ldth0")

[node name="Label" type="Label" parent="EnemyIcon"]
offset_left = 135.252
offset_top = -11.379
offset_right = 453.252
offset_bottom = 134.621
text = "A/N"
label_settings = SubResource("LabelSettings_35wi1")

[connection signal="area_entered" from="ColisonItem" to="." method="_on_colison_item_area_entered"]
[connection signal="body_entered" from="ColisonItem" to="." method="_on_colison_item_body_entered"]
[connection signal="body_exited" from="ColisonItem" to="." method="_on_colison_item_body_exited"]
